@@ -748,44 +748,30 @@ const PETScMatrix& PETScMatrix::operator= (const PETScMatrix& A)
 //-----------------------------------------------------------------------------
 void PETScMatrix::set_nullspace(const VectorSpaceBasis& nullspace)
 {
-  PetscErrorCode ierr;
-
-  // Copy vectors
-  std::vector<PETScVector> _nullspace;
-  for (std::size_t i = 0; i < nullspace.dim(); ++i)
-  {
-    dolfin_assert(nullspace[i]);
-    const PETScVector& x = nullspace[i]->down_cast<PETScVector>();
-
-    // Copy vector
-    _nullspace.push_back(x);
-  }
-
-  // Get pointers to underlying PETSc objects and normalize vectors
-  std::vector<Vec> petsc_vecs;
-  for (auto& basis_vector : _nullspace)
-  {
-    // Store pointer to PETSc Vec
-    petsc_vecs.push_back(basis_vector.vec());
-
-    PetscReal val = 0.0;
-    ierr = VecNormalize(basis_vector.vec(), &val);
-    if (ierr != 0) petsc_error(ierr, __FILE__, "VecNormalize");
-  }
-
-  // Create PETSC nullspace
-  MatNullSpace petsc_nullspace = NULL;
-  ierr = MatNullSpaceCreate(mpi_comm(), PETSC_FALSE, petsc_vecs.size(),
-                            petsc_vecs.data(), &petsc_nullspace);
-  if (ierr != 0) petsc_error(ierr, __FILE__, "MatNullSpaceCreate");
+  // Build PETSc nullspace
+  MatNullSpace petsc_ns = create_petsc_nullspace(nullspace);
 
   // Attach PETSc nullspace to matrix
   dolfin_assert(_matA);
-  ierr = MatSetNullSpace(_matA, petsc_nullspace);
+  PetscErrorCode ierr = MatSetNullSpace(_matA, petsc_ns);
+  if (ierr != 0) petsc_error(ierr, __FILE__, "MatSetNullSpace");
+
+  // Decrease reference count for nullspace by destroying
+  MatNullSpaceDestroy(&petsc_ns);
+}
+//-----------------------------------------------------------------------------
+void PETScMatrix::set_near_nullspace(const VectorSpaceBasis& nullspace)
+{
+  // Create PETSc nullspace
+  MatNullSpace petsc_ns = create_petsc_nullspace(nullspace);
+
+  // Attach near  nullspace to matrix
+  dolfin_assert(_matA);
+  PetscErrorCode ierr = MatSetNearNullSpace(_matA, petsc_ns);
   if (ierr != 0) petsc_error(ierr, __FILE__, "MatSetNullSpace");
 
   // Decrease reference count for nullspace
-  MatNullSpaceDestroy(&petsc_nullspace);
+  MatNullSpaceDestroy(&petsc_ns);
 }
 //-----------------------------------------------------------------------------
 void PETScMatrix::binary_dump(std::string file_name) const
@@ -834,5 +820,35 @@ std::string PETScMatrix::str(bool verbose) const
   return s.str();
 }
 //-----------------------------------------------------------------------------
+MatNullSpace PETScMatrix::create_petsc_nullspace(const VectorSpaceBasis& nullspace) const
+{
+  PetscErrorCode ierr;
+
+  // Copy vectors in vector space object
+  std::vector<PETScVector> _nullspace;
+  for (std::size_t i = 0; i < nullspace.dim(); ++i)
+  {
+    dolfin_assert(nullspace[i]);
+    const PETScVector& x = nullspace[i]->down_cast<PETScVector>();
+
+    // Copy vector
+    _nullspace.push_back(x);
+  }
+
+  // Get pointers to underlying PETSc objects
+  std::vector<Vec> petsc_vecs;
+  for (auto& basis_vector : _nullspace)
+    petsc_vecs.push_back(basis_vector.vec());
+
+  // Create PETSC nullspace
+  MatNullSpace petsc_nullspace = NULL;
+  ierr = MatNullSpaceCreate(mpi_comm(), PETSC_FALSE, petsc_vecs.size(),
+                            petsc_vecs.data(), &petsc_nullspace);
+  if (ierr != 0) petsc_error(ierr, __FILE__, "MatNullSpaceCreate");
+
+  return petsc_nullspace;
+}
+//-----------------------------------------------------------------------------
+
 
 #endif
