@@ -217,13 +217,21 @@ namespace dolfin
     /// Assignment operator
     const PETScMatrix& operator= (const PETScMatrix& A);
 
-    /// Attach nullspace to matrix
+    /// Attach nullspace to matrix (typically used by Krylov solvers
+    /// when solving singular systems)
     void set_nullspace(const VectorSpaceBasis& nullspace);
+
+    /// Attach near nullspace to matrix (used by preconditioners, such
+    /// as smoothed aggregation algerbraic multigrid)
+    void set_near_nullspace(const VectorSpaceBasis& nullspace);
 
     /// Dump matrix to PETSc binary format
     void binary_dump(std::string file_name) const;
 
   private:
+
+    // Create PETSc nullspace object
+    MatNullSpace create_petsc_nullspace(const VectorSpaceBasis& nullspace) const;
 
     // Prefix for PETSc options database
     std::string _petsc_options_prefix;
